[package]
name = "halloween_2023"
version = "0.1.0"
edition = "2021"
authors = ["Cyprien Boree <boreec@tuta.io>"]

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.11.3", features = ["dynamic_linking", "mp3"] }
minimp3 = "0.5.1"
